syntax = "proto3";

import "google/protobuf/any.proto"; 

package axbolt.outbox;
option go_package = "delayedmessage";

// DelayedMessage is a container for holding delayed message-specific data that is
// serialized into the protobuf format before being persisted in a Bolt bucket
message DelayedMessage{
    string id = 1;
    string causation_id = 2;
    string correlation_id = 3;
    string created_at = 4;
    string send_at = 5;
    google.protobuf.Any message = 6;
    int32 operation = 7;
    string destination_endpoint = 8;
} 
